--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,9 @@
 :root {
   --color: #8e44ad;
   --colorDark: #1c1c1c;
+  --plomoOscuro: #566573;
   --blanco: #ffffff;
+  --amarilloClaro: #f9e79f;
 }
 
 * {
@@ -53,12 +55,61 @@ body {
   align-items: center;
   justify-content: space-between;
 }
-.logo a {
+.logo__nombre {
   font-size: 2em;
   color: var(--color);
 }
-.nav .nav__ul {
+.nav {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--colorDark);
+  z-index: 9;
+  align-items: center;
+}
+.nav__ul {
   list-style: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0;
+}
+
+.nav__enlace {
+  position: relative;
+  display: inline-block;
+  line-height: 1.5;
+  overflow: hidden; /*ocultar*/
+}
+
+.nav__enlace::before,
+.nav__enlace::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--amarilloClaro);
+  transform: translate3d(-100%, 0, 0) translate3d(-1px, 0, 0);
+  transition: transform 0.7s;
+  transition-timing-function: cubic-bezier(0.7, 0, 0.3, 1);
+}
+
+.nav__enlace:after {
+  height: 0.4rem;
+  top: auto;
+  bottom: 0;
+  background-color: var(--amarilloClaro);
+}
+
+.nav__enlace:hover::before {
+  transform: translate3d(100%, 0, 0) translate3d(1px, 0, 0);
+}
+.nav__enlace:hover::after {
+  transform: translate3d(0, 0, 0);
 }
 
 @media (min-width: 992px) {
@@ -68,20 +119,81 @@ body {
     background-color: transparent;
     padding: 0;
   }
-  .nav .nav__ul {
+  .nav__ul {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
   }
-  .nav .nav__lista {
+  .nav__lista {
     display: flex;
     align-items: center;
   }
-  .nav .nav__lista .nav__enlace {
+  .nav__enlace::after {
+    height: 0.2rem;
+  }
+  .nav__enlace {
     color: inherit;
     margin-right: 4rem;
     font-size: 1.4rem;
     font-weight: 400;
     text-transform: uppercase;
   }
+}
+
+/* Botones */
+.botones {
+}
+
+.botones__busqueda {
+}
+.botones__busqueda,
+.botones__menu {
+  position: relative;
+  background-color: transparent;
+  border: 0;
+  color: var(--blanco);
+  outline: 0;
+  font-size: 1.6rem;
+  cursor: pointer;
+  padding: 1rem;
+}
+
+/* busqueda formulario */
+.busqueda-form {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  padding: 0 2rem;
+  z-index: 9;
+  background-color: var(--colorDark);
+  display: none;
+}
+
+.busqueda-form input {
+  padding: 0 8rem 0 2rem;
+  line-height: inherit;
+  height: auto;
+  text-align: right;
+  border: 0;
+  outline: 0;
+  font-size: 1.6rem;
+  background-color: var(--blanco);
+}
+
+.busqueda-form :is(form, input) {
+  width: 100%;
+}
+
+.showbusqueda .busqueda-form {
+  display: flex;
+}
+
+.showbusqueda .botones__busqueda {
+  z-index: 10;
+  color: var(--colorDark);
+}
+.showbusqueda .botones__busqueda i::before {
+  content: '\f00d';
 }
