--- a/css/style.css
+++ b/css/style.css
@@ -42,10 +42,10 @@ body {
 
 .header {
   line-height: 8rem;
-  background-color: var(--blanco);
+  background-color: var(--colorDark);
   z-index: 10;
   position: relative;
-  color: var(--colorDark);
+  color: var(--blanco);
   box-shadow: rgb(50 50 93 / 25%) 0 50px 100px -20px,
     rgb(0 0 0 / 30%) 0 30px 60px -30px;
 }
@@ -57,7 +57,7 @@ body {
 }
 .logo__nombre {
   font-size: 2em;
-  color: var(--color);
+  color: var(--blanco);
 }
 
 .nav {
@@ -98,7 +98,7 @@ body {
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: var(--color);
+  background-color: var(--amarilloClaro);
   transform: translate3d(-100%, 0, 0) translate3d(-1px, 0, 0);
   transition: transform 0.7s;
   transition-timing-function: cubic-bezier(0.7, 0, 0.3, 1);
@@ -108,7 +108,7 @@ body {
   height: 0.4rem;
   top: auto;
   bottom: 0;
-  background-color: var(--color);
+  background-color: var(--amarilloClaro);
 }
 
 .nav__enlace:hover::before {
@@ -161,6 +161,7 @@ body {
   font-size: 1.6rem;
   cursor: pointer;
   padding: 1rem;
+  color: var(--blanco);
 }
 
 /* busqueda formulario */
@@ -172,7 +173,7 @@ body {
   height: 100%;
   padding: 0 2rem;
   z-index: 9;
-  background-color: var(--blanco);
+  background-color: var(--colorDark);
   display: none;
 }
 
@@ -184,6 +185,8 @@ body {
   border: 0;
   outline: 0;
   font-size: 1.6rem;
+  background-color: var(--plomoOscuro);
+  color: var(--blanco);
 }
 
 .busqueda-form :is(form, input) {
